# azothacore-rs

./: .gitignore  .gitmodules  .test.env  Cargo.toml  README.md  docker-compose.yml  rust-toolchain.toml  rustfmt.toml  toolchain.toml
azothacore-modules/: .gitignore  Cargo.toml  build.rs
azothacore-modules/mod-skeleton-example/: mod.rs
azothacore-modules/src/: lib.rs
azothacore-script-modules/modules/: Cargo.toml
azothacore-script-modules/modules/src/: lib.rs
crates/authserver/: Cargo.toml
crates/authserver/src/: config.rs  lib.rs  main.rs  rest.rs  session.rs  ssl_context.rs
crates/azothacore-app-authserver/: Cargo.toml
crates/azothacore-app-authserver/src/: lib.rs  main.rs  rest.rs  session.rs
crates/azothacore-app-worldserver/: Cargo.toml
crates/azothacore-app-worldserver/src/: main.rs
crates/azothacore-common/: Cargo.toml  build.rs
crates/azothacore-common/src/: async.rs  banner.rs  bevy_app.rs  bounded_nums.rs  compile_options.rs  configuration.rs  g3dlite_copied.rs  lib.rs  log.rs  macros.rs  recastnavigation_handles.rs  utils.rs
crates/azothacore-common/src/collision/: management.rs  maps.rs  models.rs  vmap_definitions.rs
crates/azothacore-common/src/collision/management/: mmap_mgr.rs  vmap_mgr2.rs
crates/azothacore-common/src/collision/maps/: map_defines.rs  map_tree.rs
crates/azothacore-common/src/collision/models/: game_object_model.rs  model_instance.rs  world_model.rs
crates/azothacore-common/src/configuration/: structs.rs
crates/azothacore-common/src/macros/: cargo.rs  format.rs  ops.rs
crates/azothacore-database/: Cargo.toml
crates/azothacore-database/src/: database_env.rs  database_loader.rs  database_loader_utils.rs  database_update_fetcher.rs  database_updater.rs  lib.rs
crates/azothacore-server/: Cargo.toml
crates/azothacore-server/src/: database.rs  game.rs  lib.rs  macros.rs  shared.rs
crates/azothacore-server/src/database/: database_env.rs  database_loader.rs  database_loader_utils.rs  database_update_fetcher.rs  database_updater.rs
crates/azothacore-server/src/game/: accounts.rs  battleground.rs  battlegrounds.rs  cache.rs  conditions.rs  dungeon_finding.rs  entities.rs  globals.rs  grid.rs  groups.rs  guilds.rs  loot.rs  map.rs  scripting.rs  scripts.rs  server.rs  time.rs  world.rs
crates/azothacore-server/src/game/accounts/: account_mgr.rs  battlenet_account_mgr.rs  rbac.rs
crates/azothacore-server/src/game/cache/: character_cache.rs
crates/azothacore-server/src/game/conditions/: disable_mgr.rs
crates/azothacore-server/src/game/dungeon_finding/: lfg.rs  lfg_group_data.rs  lfg_player_data.rs
crates/azothacore-server/src/game/entities/: object.rs  player.rs  unit.rs
crates/azothacore-server/src/game/entities/object/: object_defines.rs  object_guid.rs
crates/azothacore-server/src/game/globals/: object_mgr.rs
crates/azothacore-server/src/game/grid/: grid_defines.rs
crates/azothacore-server/src/game/groups/: group_mgr.rs
crates/azothacore-server/src/game/map/: map_file.rs  map_mgr.rs
crates/azothacore-server/src/game/scripting/: script_defines.rs  script_mgr.rs  script_object.rs
crates/azothacore-server/src/game/scripting/script_defines/: account_script.rs  database_script.rs  world_script.rs
crates/azothacore-server/src/game/server/: world_packets.rs
crates/azothacore-server/src/game/server/world_packets/: lfg_packets_common.rs
crates/azothacore-server/src/game/world/: world_impl.rs  world_trait.rs
crates/azothacore-server/src/game/world/world_impl/: config.rs
crates/azothacore-server/src/macros/: signals.rs
crates/azothacore-server/src/shared/: data_stores.rs  id_generators.rs  networking.rs  realms.rs  secrets.rs  shared_defines.rs
crates/azothacore-server/src/shared/data_stores/: db2_loader.rs  dbc_enums.rs
crates/azothacore-server/src/shared/data_stores/db2_structure/: wow7_3_5_26972.rs
crates/azothacore-server/src/shared/data_stores/dbc_enums/: wow7_3_5_26972.rs
crates/azothacore-server/src/shared/networking/: socket.rs  socket_mgr.rs
crates/azothacore-server/src/shared/realms/: realm_list.rs
crates/azothacore-tools/: Cargo.toml
crates/azothacore-tools/src/: adt.rs  basic_extractor.rs  extractor_common.rs  lib.rs  mmap_generator.rs  vmap4_assembler.rs  vmap4_extractor.rs  wdt.rs
crates/azothacore-tools/src/extractor_common/: casc_handles.rs
crates/azothacore-tools/src/mmap_generator/: common.rs  intermediate_values.rs  map_builder.rs  terrain_builder.rs  tile_builder.rs
crates/azothacore-tools/src/vmap4_assembler/: tile_assembler.rs
crates/azothacore-tools/src/vmap4_extractor/: model.rs  wmo.rs
crates/bnet-rpc/: Cargo.toml  README.md  build.rs
crates/bnet-rpc/protos/current/bgs/low/pb/client/: account_service.proto  account_types.proto  attribute_types.proto  authentication_service.proto  challenge_service.proto  channel_service.proto  channel_types.proto  connection_service.proto  content_handle_types.proto  entity_types.proto  friends_service.proto  friends_types.proto  game_utilities_service.proto  game_utilities_types.proto  invitation_types.proto  notification_types.proto  presence_service.proto  presence_types.proto  profanity_filter_config.proto  report_service.proto  report_types.proto  resource_service.proto  role_types.proto  rpc_config.proto  rpc_types.proto  trace_types.proto  user_manager_service.proto  user_manager_types.proto
crates/bnet-rpc/protos/current/bgs/low/pb/client/client/v1/: channel_id.proto
crates/bnet-rpc/protos/current/bgs/low/pb/client/client/v2/: attribute_types_v2.proto
crates/bnet-rpc/protos/current/bgs/low/pb/client/global_extensions/: field_options.proto  message_options.proto  method_options.proto  service_options.proto
crates/bnet-rpc/protos/current/google/protobuf/: descriptor.proto
crates/bnet-rpc/src/: lib.rs  rpc_error_codes.rs
crates/connection-patcher/: Cargo.toml
crates/connection-patcher/src/: main.rs
crates/dbimport/: Cargo.toml
crates/dbimport/src/: lib.rs  main.rs
crates/worldserver/: Cargo.toml
crates/worldserver/src/: main.rs
data/: .gitignore
src/: common.rs  lib.rs  (+6 more)
(+748 files in other folders)
