[workspace]
resolver = "2"
members = ["crates/*", "azothacore-script-modules/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[workspace.dependencies]
# Local crates
azothacore-common = { path = "crates/azothacore-common" }
azothacore-modules = { path = "azothacore-script-modules/modules" }
azothacore-server = { path = "crates/azothacore-server" }
azothacore-tools = { path = "crates/azothacore-tools" }
bnet-rpc = { path = "crates/bnet-rpc" }
casclib-sys = { path = "crates/casclib-sys" }
wow-db2 = { path = "crates/wow-db2" }
wow-db2-proc-macros = { path = "crates/wow-db2-proc-macros" }
# External crates
axum = { version = "0" }
axum-extra = { version = "0", features = ["typed-header"] }
bytes = { version = "1" }
clap =  { version = "4", features = ["derive"] }
flagset = { version = "0", features = ["serde"] }
futures = "0"
ipnet = { version = "2" }
libz-sys = { version = "1.1.12", default-features = false, features = ["libc", "static"] }
nalgebra = { version = "0", features = [ "serde-serialize" ] }
num = { version = "0" }
num-derive = { version = "0" }
num-traits = { version = "0" }
parry3d = { version = "0", features = ["serde-serialize"] }
prost = { version = "0" }
rand = { version = "0" }
recastnavigation-sys = { version = "1", features = [ "detour", "recast", "detour_large_nav_meshes" ] }
serde = { version = "1", features = ["derive"] }
serde_default = "0"
serde_json = "1"
serde-inline-default = "0"
sha2 = "0"
sqlx = { version = "0", features = [ "runtime-tokio-rustls", "mysql", "time"] }
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0" }
toml = { version = "0", features = ["preserve_order"] }
tracing = { version = "0" }
walkdir = { version = "2" }
