[workspace]
resolver = "2"
members = ["crates/*", "azothacore-modules", "xtask"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
# Local crates
azothacore-common = { path = "crates/azothacore-common" }
azothacore-database ={ path = "crates/azothacore-database", features = [ "mysql" ] }
azothacore-tests-utils ={ path = "crates/azothacore-tests-utils" }
azothacore-modules = { path = "azothacore-modules" }
azothacore-server = { path = "crates/azothacore-server" }
azothacore-tools = { path = "crates/azothacore-tools" }
bnet-rpc = { path = "crates/bnet-rpc" }
casclib-sys = { path = "crates/casclib-sys" }
wow-db2 = { path = "crates/wow-db2" }
wow-db2-proc-macros = { path = "crates/wow-db2-proc-macros" }
# External crates
axum = { version = "0" }
axum-extra = { version = "0", features = ["typed-header"] }
bevy = { version = "0", features = ["multi_threaded", "bevy_state", "bevy_asset"], default-features = false }
bytes = { version = "1" }
cfg-if = { version = "1" }
chrono = { version = "0" }
clap =  { version = "4", features = ["string", "derive", "help"] }
figment = { version = "0", features = ["toml", "env"] }
flagset = { version = "0", features = ["serde"] }
flate2 = { version = "1", features = ["zlib-ng-compat"], default-features = false }
futures = "0"
futures-core = "0"
hugsqlx = { version = "0", features = [ "mysql" ] }
humantime = { version = "2" }
ipnet = { version = "2" }
itertools = "0"
nalgebra = { version = "0", features = [ "serde-serialize" ] }
num = { version = "0" }
num-derive = { version = "0" }
num-traits = { version = "0" }
parry3d = { version = "0", features = ["serde-serialize"] }
prost = { version = "0" }
rand = { version = "0" }
recastnavigation-sys = { version = "1", features = [ "detour", "recast", "detour_large_nav_meshes" ] }
regex = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_default = "0"
serde_json = "1"
serde-inline-default = "0"
sha2 = "0"
sqlx = { version = "0", features = [ "runtime-tokio-rustls", "mysql", "chrono" ] }
structstruck = "0"
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0" }
walkdir = { version = "2" }
