[package]
name = "azothacore-modules"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azothacore-common.workspace = true
azothacore-server.workspace = true
bevy.workspace = true
skeleton-module = { path = "../skeleton-module" }
