[package]
name = "authserver"
version = "0.0.0"
edition = "2021"

[dependencies]
# Local crates
azothacore-common.workspace=true
azothacore-database.workspace=true
azothacore-server.workspace=true
bnet-rpc.workspace=true
# External crates
axum-extra.workspace = true
axum.workspace = true
bevy.workspace = true
bytes.workspace = true
clap.workspace = true
hyper = { version = "1" }
hyper-util = { version = "0" }
ipnet.workspace = true
prost.workspace = true
rand.workspace = true
serde_default.workspace = true
serde_json.workspace = true
serde-inline-default.workspace = true
serde.workspace = true
sqlx.workspace = true
structstruck.workspace = true
thiserror.workspace = true
tokio-native-tls = { version = "0", features=["vendored"] }
tokio.workspace = true
tower-service = "0"
tracing.workspace = true
