[package]
name = "azothacore-app-authserver"
version = "0.0.0"
edition = "2021"

[dependencies]
# Local crates
azothacore-common.workspace=true
azothacore-server.workspace=true
bnet-rpc.workspace=true
# External crates
ipnet.workspace = true
axum.workspace = true
bytes.workspace = true
sqlx.workspace = true
clap.workspace = true
num-bigint.workspace = true
rand.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
prost.workspace = true
rustls = { version = "0" }
rustls-pemfile = { version = "1" }
hyper = { version = "1" }
tokio-rustls = { version = "0", features=["tls12"] }
