[package]
name = "azothacore-app-worldserver"
version = "0.0.0"
edition = "2021"

[dependencies]
# Local crates
azothacore-common.workspace=true
azothacore-server.workspace=true
azothacore-modules.workspace=true
# External crates
flagset.workspace =true
tracing.workspace = true
futures.workspace = true
tokio.workspace = true
sqlx.workspace = true
clap.workspace = true
rand.workspace = true
num-bigint.workspace = true
