[package]
name = "azothacore-app-worldserver"
version = "0.0.0"
edition = "2021"

[dependencies]
# Local crates
azothacore-common.workspace=true
azothacore-modules.workspace=true
azothacore-server.workspace=true
# External crates
clap.workspace = true
flagset.workspace =true
futures.workspace = true
num-bigint.workspace = true
rand.workspace = true
sqlx.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true
