[package]
name = "azothacore-common"
version = "0.0.0"
edition = "2021"

[dependencies]
# Local crates
# External crates
tracing.workspace = true
flagset.workspace = true
num.workspace = true
num-traits.workspace = true
num-derive.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
serde_default.workspace = true
serde-inline-default.workspace = true
structstruck.workspace = true
nalgebra.workspace = true
parry3d.workspace = true
recastnavigation-sys.workspace = true
anyhow = { version = "1.0" }
const_format = { version = "0.2.30" }
git-version = { version = "0.3.5" }
tracing-subscriber = { version = "0.3", features = ["registry"] }
console-subscriber = { version = "0.1.8" }
tracing-appender = { version = "0.2" }
hex = { version = "0.4.3" }
bincode = { version = "1.3.3" }

