[package]
name = "azothacore-common"
version = "0.0.0"
edition = "2021"

[dependencies]
# Local crates
# External crates
anyhow = { version = "1" }
bincode = { version = "1" }
console-subscriber = { version = "0" }
const_format = { version = "0" }
flagset.workspace = true
git-version = { version = "0" }
hex = { version = "0" }
nalgebra.workspace = true
num-derive.workspace = true
num-traits.workspace = true
num.workspace = true
parry3d.workspace = true
recastnavigation-sys.workspace = true
serde_default.workspace = true
serde-inline-default.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing-appender = { version = "0" }
tracing-subscriber = { version = "0", features = ["registry"] }
tracing.workspace = true
