[package]
name = "azothacore-common"
version = "0.0.0"
edition = "2021"

[dev-dependencies]
# Local crates
figment = { workspace = true, features = ["test"] }

[build-dependencies]
quote = "1"
syn = "2"
proc-macro2 = "1"

[dependencies]
# Local crates
wow-db2.workspace = true
# External crates
anyhow = { version = "1" }
bevy.workspace = true
bincode = { version = "1" }
bytes.workspace = true
chrono.workspace = true
const_format = { version = "0" }
figment.workspace = true
flagset.workspace = true
futures.workspace = true
git-version = { version = "0" }
hex_fmt = { version = "0" }
humantime.workspace = true
nalgebra.workspace = true
num-derive.workspace = true
num-traits.workspace = true
num.workspace = true
parry3d.workspace = true
recastnavigation-sys.workspace = true
serde_default.workspace = true
serde_json.workspace = true
serde-inline-default.workspace = true
serde.workspace = true
structstruck.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-appender = { version = "0" }
tracing-subscriber = { version = "0", features = ["registry"] }
tracing.workspace = true
