[package]
name = "azothacore-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-utils = ["dep:dotenvy"]

[dependencies]
# Local crates
azothacore-common.workspace = true
# External crates
flate2.workspace = true
futures-core.workspace = true
hugsqlx.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
walkdir.workspace = true
dotenvy = { version = "0", optional = true }
