[package]
name = "azothacore-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local crates
azothacore-common.workspace = true
# External crates
bevy.workspace = true
flate2.workspace = true
futures-core.workspace = true
hugsqlx.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
walkdir.workspace = true
