[package]
name = "azothacore-server"
version = "0.0.0"
edition = "2021"

[dev-dependencies]
# Local crates
azothacore-database = { path = "../azothacore-database", features = ["test-utils"] }

[dependencies]
# Local crates
azothacore-common.workspace = true
azothacore-database = { path = "../azothacore-database" }
wow-db2-proc-macros.workspace = true
wow-db2.workspace = true
# External crates
bytes.workspace = true
clap.workspace = true
flagset.workspace = true
flate2.workspace = true
futures.workspace = true
ipnet.workspace = true
nalgebra.workspace = true
num-derive.workspace = true
num-traits.workspace = true
num.workspace = true
rand.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
shlex = { version = "1" }
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
