[package]
name = "azothacore-server"
version = "0.0.0"
edition = "2021"

[dev-dependencies]
azothacore-tests-utils.workspace = true

[dependencies]
# Local crates
azothacore-common.workspace = true
azothacore-database.workspace = true
wow-db2-proc-macros.workspace = true
wow-db2.workspace = true
# External crates
bevy.workspace = true
bytes.workspace = true
clap.workspace = true
flagset.workspace = true
flate2.workspace = true
futures.workspace = true
ipnet.workspace = true
nalgebra.workspace = true
num-derive.workspace = true
num-traits.workspace = true
num.workspace = true
rand.workspace = true
regex.workspace = true
serde_default.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde-inline-default.workspace = true
serde.workspace = true
sha2.workspace = true
shlex = { version = "1" }
sqlx.workspace = true
structstruck.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
