[package]
name = "azothacore-tools"
version = "0.0.0"
edition = "2021"

[dependencies]
# Local crates
azothacore-common.workspace = true
azothacore-server.workspace = true
recastnavigation-sys.workspace = true
casclib-sys.workspace = true
wow-db2.workspace = true
# External crates
toml.workspace = true
tracing.workspace = true
flagset.workspace = true
serde_default.workspace = true
serde-inline-default.workspace = true
structstruck.workspace = true
num.workspace = true
num-traits.workspace = true
num-derive.workspace = true
thiserror.workspace = true
nalgebra.workspace = true
parry3d.workspace = true
serde.workspace = true
futures.workspace = true
tokio.workspace = true
sscanf = "0.4.1"
zerocopy = { version = "0.7.1" }
zerocopy-derive = { version = "0.7.1" }
glob = "0.3.1"
byteorder = "1.4.3"
rayon = "1.7.0"
crossbeam = { version = "0.8.2" }
regex = "1.7.1"
libc = "0.2.148"
