[package]
name = "azothacore-tools"
version = "0.0.0"
edition = "2021"

[dependencies]
# Local crates
azothacore-common.workspace = true
azothacore-server.workspace = true
casclib-sys.workspace = true
recastnavigation-sys.workspace = true
wow-db2.workspace = true
# External crates
byteorder = "1"
crossbeam = { version = "0" }
flagset.workspace = true
futures.workspace = true
glob = "0"
libc = "0"
nalgebra.workspace = true
num-derive.workspace = true
num-traits.workspace = true
num.workspace = true
parry3d.workspace = true
rayon = "1"
serde_default.workspace = true
serde-inline-default.workspace = true
serde.workspace = true
sscanf = "0"
structstruck = "0"
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
zerocopy = { version = "0" }
zerocopy-derive = { version = "0" }
