[package]
name = "connection-patcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# # Local crates
# azothacore-server.workspace=true
# # External crates
# clap.workspace = true
# tracing.workspace = true
