[package]
name = "dbimport"
version = "0.0.0"
edition = "2021"

[dependencies]
# Local crates
azothacore-common.workspace=true
azothacore-database.workspace=true
azothacore-modules.workspace=true
azothacore-server.workspace=true
# External crates
bevy.workspace = true
clap.workspace = true
serde_default.workspace = true
serde-inline-default.workspace = true
serde.workspace = true
structstruck.workspace = true
tokio.workspace = true
tracing.workspace = true
