[package]
name = "worldserver"
version = "0.0.0"
edition = "2021"

[dependencies]
# Local crates
azothacore-common.workspace=true
azothacore-database.workspace=true
azothacore-modules.workspace=true
azothacore-server.workspace=true
# External crates
bevy.workspace = true
clap.workspace = true
flagset.workspace =true
rand.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
